--- a/Series/src/App.css
+++ b/Series/src/App.css
@@ -1,6 +1,27 @@
-.App {
+nav{
   text-align: center;
+  justify-content: center;
+  font-size: 30px;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  background-color:rgba(135, 207, 235, 0.204);
+  color:rgba(74, 11, 64, 0.808);
+  text-shadow: 0.8px 0.9px 1px blue ;
+  display:flex;
+  flex-direction: row;
 }
 
+h1{
+  display:flex;
+  flex-direction: column;
+  text-align: start;
+}
 
-
+.description{
+  display:flex;
+  flex-direction: row;
+  text-align: center;
+  height: 500px;
+  width: 400px;
+  border:2px black soild;
+  background-color: rgba(0, 0, 0, 0.41);
+}
